--- a/flexdashboard-example.Rmd
+++ b/flexdashboard-example.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Hello world"
+title: "Flexdashboard + crosstalk + leaflet"
 output: 
   flexdashboard::flex_dashboard:
     orientation: columns
