--- a/flexdashboard-example.Rmd
+++ b/flexdashboard-example.Rmd
@@ -1,8 +1,7 @@
 ---
 title: "Flexdashboard + crosstalk + leaflet"
 output: 
-  flexdashboard::flex_dashboard:
-    orientation: columns
+  flexdashboard::flex_dashboard
 ---
 
 ```{r setup, include=FALSE}
@@ -11,11 +10,14 @@ library(crosstalk)
 library(d3scatter)
 library(leaflet)
 library(dygraphs)
+library(reactable)
 shared_mtcars <- SharedData$new(mtcars)
 shared_iris <- SharedData$new(iris)
 shared_quakes <- SharedData$new(quakes[sample(nrow(quakes), 100),])
 ```
 
+Column {data-width=600}
+-------------------------
 
 ### Quakes map
 
@@ -38,5 +40,14 @@ d3scatter(shared_quakes, ~depth, ~mag, width = "100%", height = 300)
 ```{r}
 filter_slider("depth", "Depth", shared_quakes, ~depth, width = "100%")
 filter_slider("magnitude", "Magnitude", shared_quakes, ~mag, width = "100%")
+```
+
+Column {data-width=400}
+-------------------------
+
+### Table
+
+```{r}
+reactable(shared_quakes)
 ```
 
