--- a/flexdashboard-example.Rmd
+++ b/flexdashboard-example.Rmd
@@ -11,6 +11,7 @@ library(d3scatter)
 library(leaflet)
 library(dygraphs)
 library(reactable)
+library(sparkline)
 shared_mtcars <- SharedData$new(mtcars)
 shared_iris <- SharedData$new(iris)
 shared_quakes <- SharedData$new(quakes[sample(nrow(quakes), 100),])
@@ -48,6 +49,14 @@ Column {data-width=400}
 ### Table
 
 ```{r}
-reactable(shared_quakes)
+reactable(shared_quakes,
+          columns = list(mag = colDef(name = "Magnitude"),
+                         depth = colDef(name = "Depth"),
+                         stations = colDef((name = "Num stations"))),
+          defaultPageSize = 18,
+          defaultColDef = colDef(footer = function(values) {
+    if (!is.numeric(values)) return()
+    sparkline(values, type = "box", width = 100, height = 30)
+  }))
 ```
 
