--- a/flexdashboard-example.Rmd
+++ b/flexdashboard-example.Rmd
@@ -49,9 +49,32 @@ Column {data-width=400}
 ### Table
 
 ```{r}
+bar_style <- function(width = 1, fill = "#e6e6e6", height = "75%", align = c("left", "right"), color = NULL) {
+  align <- match.arg(align)
+  if (align == "left") {
+    position <- paste0(width * 100, "%")
+    image <- sprintf("linear-gradient(90deg, %1$s %2$s, transparent %2$s)", fill, position)
+  } else {
+    position <- paste0(100 - width * 100, "%")
+    image <- sprintf("linear-gradient(90deg, transparent %1$s, %2$s %1$s)", position, fill)
+  }
+  list(
+    backgroundImage = image,
+    backgroundSize = paste("100%", height),
+    backgroundRepeat = "no-repeat",
+    backgroundPosition = "center",
+    color = color
+  )
+}
+
 reactable(shared_quakes, bordered = TRUE, striped = TRUE, highlight = TRUE, 
           selection = "multiple", onClick = "select",
-          columns = list(mag = colDef(name = "Magnitude"),
+          columns = list(mag = colDef(name = "Magnitude",
+                                      style = function(value) {
+                                        bar_style(width = 0.9 * value / max(shared_quakes$data()$mag),
+                                                  fill = "#2c5e77", color = "#fff")
+                                        },
+                                      align = "left"),
                          depth = colDef(name = "Depth"),
                          stations = colDef((name = "Num stations"))),
           defaultPageSize = 18,
