--- a/flexdashboard-example.Rmd
+++ b/flexdashboard-example.Rmd
@@ -12,6 +12,7 @@ library(leaflet)
 library(dygraphs)
 library(reactable)
 library(sparkline)
+library(plotly)
 shared_mtcars <- SharedData$new(mtcars)
 shared_iris <- SharedData$new(iris)
 shared_quakes <- SharedData$new(quakes[sample(nrow(quakes), 100),])
@@ -33,7 +34,10 @@ leaflet(shared_quakes, width = "100%", height = 300) %>%
 ### Depth vs magnitude
 
 ```{r}
-d3scatter(shared_quakes, ~depth, ~mag, width = "100%", height = 300)
+# d3scatter(shared_quakes, ~depth, ~mag, width = "100%", height = 300)
+plot_ly(shared_quakes, x = ~depth, y = ~mag, name = "default") %>%
+  layout(dragmode = "select")
+# note: selection in plotly doesn't seem to work with crosstalk at this stage
 ```
 
 ### Filters
