--- a/flexdashboard-example.Rmd
+++ b/flexdashboard-example.Rmd
@@ -13,9 +13,9 @@ library(dygraphs)
 library(reactable)
 library(sparkline)
 library(plotly)
-shared_mtcars <- SharedData$new(mtcars)
-shared_iris <- SharedData$new(iris)
-shared_quakes <- SharedData$new(quakes[sample(nrow(quakes), 100),])
+
+# shared_quakes <- SharedData$new(quakes[sample(nrow(quakes), 100),])
+shared_quakes <- highlight_key(quakes[sample(nrow(quakes), 100),])
 ```
 
 Column {data-width=600}
@@ -35,7 +35,7 @@ leaflet(shared_quakes, width = "100%", height = 300) %>%
 
 ```{r}
 # d3scatter(shared_quakes, ~depth, ~mag, width = "100%", height = 300)
-plot_ly(shared_quakes, x = ~depth, y = ~mag, name = "default") %>%
+plot_ly(shared_quakes, x = ~depth, y = ~mag, color = ~stations) %>%
   layout(dragmode = "select")
 # note: selection in plotly doesn't seem to work with crosstalk at this stage
 ```
