--- a/crosstalk-map-test.Rmd
+++ b/crosstalk-map-test.Rmd
@@ -13,6 +13,25 @@ library(crosstalk)
 library(leaflet)
 library(sf)
 library(d3scatter)
+
+path_to_shapefile <- "D:/GIS/census/Census 2013/ESRI_Shapefile_Digital_Boundaries_2014_High_Def_Clipped/MB2014_HD_Clipped.shp"
+path_to_mb_data <- "D:/GIS/census/Census 2013/2013_mb_dataset_Total_New_Zealand_CSV/mb2013_indiv1.csv"
+
+mb_df <- read_csv(path_to_mb_data) %>% select(1:6)
+
+mb_geom <- st_read(path_to_shapefile,
+                    quiet = TRUE) %>% 
+  filter(UA2014_NAM == "Whangarei") %>% 
+  left_join(mb_df, by = c("MB2014" = "Code")) %>% 
+  mutate(pop_density = `2013_Census_census_usually_resident_population_count(1)` / SHAPE_Area) %>% 
+  select(MB2014, pop_density,
+         pop_2001 = `2001_Census_census_usually_resident_population_count(1)`,
+         pop_2013 = `2013_Census_census_usually_resident_population_count(1)`,
+         ) %>% 
+  st_transform(crs = 4326)
+
+shared_mb <- SharedData$new(mb_geom, key = ~MB2014)
+
 ```
 
 Column {data-width=400}
@@ -21,7 +40,7 @@ Column {data-width=400}
 ### Chart
 
 ```{r}
-
+d3scatter(shared_mb, ~pop_2001, ~pop_2013, width = "100%")
 ```
 
 Column {data-width=600}
@@ -30,6 +49,11 @@ Column {data-width=600}
 ### Map
 
 ```{r}
+leaflet(shared_mb) %>%
+  addTiles(group = "OSM") %>%
+  addPolygons(weight = 0.5)
+
+# no interaction so far
 
 ```
 
