--- a/leaflet-flexdashboard-size-test.Rmd
+++ b/leaflet-flexdashboard-size-test.Rmd
@@ -71,8 +71,26 @@ leaflet() %>%
                    stroke = TRUE, color = "white", opacity = 1, weight = 1,
                    fill = TRUE, fillColor = ~value_pal(value), fillOpacity = 0.8,
                    popup = ~glue("{MB2014}")) %>%
+  addPolygons(data = mock_stats_sf %>% filter(threshold == 30),
+              group = "15",
+                   label = ~glue("{MB2014}"),
+                   stroke = TRUE, color = "white", opacity = 1, weight = 1,
+                   fill = TRUE, fillColor = ~value_pal(value), fillOpacity = 0.8,
+                   popup = ~glue("{MB2014}")) %>%
+  # addPolygons(data = mock_stats_sf %>% filter(threshold == 45),
+  #             group = "15",
+  #                  label = ~glue("{MB2014}"),
+  #                  stroke = TRUE, color = "white", opacity = 1, weight = 1,
+  #                  fill = TRUE, fillColor = ~value_pal(value), fillOpacity = 0.8,
+  #                  popup = ~glue("{MB2014}")) %>%
+  # addPolygons(data = mock_stats_sf %>% filter(threshold == 60),
+  #             group = "15",
+  #                  label = ~glue("{MB2014}"),
+  #                  stroke = TRUE, color = "white", opacity = 1, weight = 1,
+  #                  fill = TRUE, fillColor = ~value_pal(value), fillOpacity = 0.8,
+  #                  popup = ~glue("{MB2014}")) %>%
   addLayersControl(baseGroups = c("Terrain", "TopoMap", "Aerial", "OSM", "Toner Lite"),
-                   overlayGroups = c("15"),
+                   overlayGroups = c("15", "30", "45", "60"),
                    options = layersControlOptions(collapsed = FALSE)) %>%
   addMeasure(primaryLengthUnit = "meters", primaryAreaUnit = "sqmeters")
 
@@ -92,6 +110,8 @@ mock_stats_sf %>% as.data.frame() %>% count(threshold)
 
 Text output only: 880kB
 One leaflet layer: 4.1MB
+Two leaflet layers: MB
+Four leaflet layers: 11.9MB
 
 ### Chart C
 
