--- a/leaflet-flexdashboard-size-test.Rmd
+++ b/leaflet-flexdashboard-size-test.Rmd
@@ -72,23 +72,23 @@ leaflet() %>%
                    fill = TRUE, fillColor = ~value_pal(value), fillOpacity = 0.8,
                    popup = ~glue("{MB2014}")) %>%
   addPolygons(data = mock_stats_sf %>% filter(threshold == 30),
-              group = "15",
+              group = "30",
                    label = ~glue("{MB2014}"),
                    stroke = TRUE, color = "white", opacity = 1, weight = 1,
                    fill = TRUE, fillColor = ~value_pal(value), fillOpacity = 0.8,
                    popup = ~glue("{MB2014}")) %>%
-  # addPolygons(data = mock_stats_sf %>% filter(threshold == 45),
-  #             group = "15",
-  #                  label = ~glue("{MB2014}"),
-  #                  stroke = TRUE, color = "white", opacity = 1, weight = 1,
-  #                  fill = TRUE, fillColor = ~value_pal(value), fillOpacity = 0.8,
-  #                  popup = ~glue("{MB2014}")) %>%
-  # addPolygons(data = mock_stats_sf %>% filter(threshold == 60),
-  #             group = "15",
-  #                  label = ~glue("{MB2014}"),
-  #                  stroke = TRUE, color = "white", opacity = 1, weight = 1,
-  #                  fill = TRUE, fillColor = ~value_pal(value), fillOpacity = 0.8,
-  #                  popup = ~glue("{MB2014}")) %>%
+  addPolygons(data = mock_stats_sf %>% filter(threshold == 45),
+              group = "45",
+                   label = ~glue("{MB2014}"),
+                   stroke = TRUE, color = "white", opacity = 1, weight = 1,
+                   fill = TRUE, fillColor = ~value_pal(value), fillOpacity = 0.8,
+                   popup = ~glue("{MB2014}")) %>%
+  addPolygons(data = mock_stats_sf %>% filter(threshold == 60),
+              group = "60",
+                   label = ~glue("{MB2014}"),
+                   stroke = TRUE, color = "white", opacity = 1, weight = 1,
+                   fill = TRUE, fillColor = ~value_pal(value), fillOpacity = 0.8,
+                   popup = ~glue("{MB2014}")) %>%
   addLayersControl(baseGroups = c("Terrain", "TopoMap", "Aerial", "OSM", "Toner Lite"),
                    overlayGroups = c("15", "30", "45", "60"),
                    options = layersControlOptions(collapsed = FALSE)) %>%
@@ -109,8 +109,11 @@ mock_stats_sf %>% as.data.frame() %>% count(threshold)
 4 layers, 500 meshblocks per layer
 
 Text output only: 880kB
+
 One leaflet layer: 4.1MB
-Two leaflet layers: MB
+
+Two leaflet layers: 6.7MB
+
 Four leaflet layers: 11.9MB
 
 ### Chart C
