--- a/leaflet-flexdashboard-size-test.Rmd
+++ b/leaflet-flexdashboard-size-test.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Untitled"
+title: "Accessibility analysis"
 output: 
   flexdashboard::flex_dashboard:
     orientation: columns
@@ -14,6 +14,7 @@ library(glue)
 library(fs)
 library(janitor)
 library(leaflet)
+library(DT)
 
 this_area <- "Whangarei District"
 
@@ -53,10 +54,12 @@ mock_stats_sf <- mb_geom %>%
 value_pal <- colorNumeric("viridis", domain = density_range)
 ```
 
+# Main map
+
 Column {data-width=650}
 -----------------------------------------------------------------------
 
-### Chart A
+### Map
 
 ```{r}
 leaflet() %>%
@@ -100,26 +103,45 @@ leaflet() %>%
 Column {data-width=350}
 -----------------------------------------------------------------------
 
-### Chart B
+### File size info
 
 ```{r}
-mock_stats_sf %>% as.data.frame() %>% count(threshold)
+dashboard_file_size <- tribble(
+  ~layers, ~size_mb,
+0, .88,
+1, 4.1,
+2, 6.7,
+4, 11.9
+)
+
+dashboard_file_size %>% 
+  ggplot() +
+  geom_point(aes(x = layers, y = size_mb), colour = "firebrick", size = 3) +
+  geom_smooth(aes(x = layers, y = size_mb), method = "lm") +
+  labs(x = "leaflet layers", y = "html file size (MB)", title = "500 meshblocks per layer") +
+  theme_minimal() +
+  theme(panel.grid.minor = element_blank())
 ```
 
-4 layers, 500 meshblocks per layer
 
-Text output only: 880kB
-
-One leaflet layer: 4.1MB
-
-Two leaflet layers: 6.7MB
-
-Four leaflet layers: 11.9MB
-
-### Chart C
+### Data summary
 
 ```{r}
 mock_stats_sf %>% head(10)
 
 ```
+
+# Detailed data
+
+### Accessibility data table {data-height=800}
+    
+```{r}
+mock_stats %>% 
+  datatable(filter = 'top',
+            options = list(pageLength = 15, autoWidth = TRUE))
+```
+    
+### About this data {data-height=200}
+
+This example is for ```{r this_area}```. All data is mocked up for demo purposes.
 
