--- a/leaflet-flexdashboard-size-test.Rmd
+++ b/leaflet-flexdashboard-size-test.Rmd
@@ -101,6 +101,9 @@ leaflet() %>%
   addLayersControl(baseGroups = c("Terrain", "TopoMap", "Aerial", "OSM", "Toner Lite"),
                    overlayGroups = c("15", "30", "45", "60"),
                    options = layersControlOptions(collapsed = FALSE)) %>%
+  # addLegend(pal = value_pal, values = ~value, opacity = 0.7, title = NULL,
+  #           labFormat = c(0, 5.648762e-06, 1.178637e-04, 1),
+  #           position = "bottomright") %>% 
   addMeasure(primaryLengthUnit = "meters", primaryAreaUnit = "sqmeters")
 
   
